# agent-lab

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config-ignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  justfile  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml
.claude/commands/: new-exp.md  promote-model.md  run-sweep.md  show-finding.md
.dvc/: config
.github/workflows/: ci.yml
analysis/EXP-002/: SUMMARY.md  per_cell_runs.csv  per_model_scorer.csv  per_model_task_passes.csv  per_model_task_turns_tools.csv  per_model_termination.csv  per_tool_success.csv  trajectory_judge.csv  verdicts.md
analysis/EXP-003a/: SUMMARY.md  best_configs.csv  pilot_raw.csv  queries.jsonl  raw.csv  verdicts.md
analysis/EXP-003b/: SUMMARY.md  faithfulness_slice.csv  kb_query_invocations.csv  per_cell_runs.csv  per_model_condition.csv  verdicts.md
analysis/EXP-004a/: SUMMARY.md  per_cell.csv  raw.csv  rerank_stats.json  verdicts.md
analysis/EXP-004c/: SUMMARY.md  per_cell.csv  queries.jsonl  raw.csv  rerank_stats.json  verdicts.md
analysis/EXP-005/: SUMMARY.md  per_category.csv  per_cell.csv  per_model_overall.csv
analysis/EXP-006/: SUMMARY.md  gap_closure.csv  per_cell.csv  per_task_endstate.csv  verdicts.md
analysis/EXP-006b/: SUMMARY.md  gap_closure.csv  per_cell.csv  per_task_endstate.csv  tokens_summary.csv  verdicts.md
analysis/EXP-009/: SUMMARY.md  per_category.csv  per_model.csv  per_task_seed_matrix.csv
analysis/EXP-010/: SUMMARY.md  per_task_pass_map.csv
analysis/EXP-011/: SUMMARY.md  h3_flags.csv  per_cell.csv
analysis/contamination/: bfcl-twin-base-n20.json  bfcl-twin-ft-n20.json
analysis/judge-calibration/: SUMMARY.md  agreement.csv  bias_category.csv  bias_family.csv  bias_length.csv  bias_subject_model.csv  calibration.csv  confusion_matrices.csv  judgments_cache.jsonl  study_population.csv
apps/eval-dashboard/: CLAUDE.md  Home.py  README.md
benchmarks/: README.md  __init__.py  bench_kb_query.py  bench_rerank.py  bench_sweep_cell.py  conftest.py  history.csv  runner.py
conf/: litellm-config.yaml  llama-swap.yaml  sandbox-image.sha
conf/_archive/: README.md
conf/serving/: llama-swap.yaml
conf/sweep/: AB-NEMOTRON-NANO2-BFCL-001.yaml  EXP-001.yaml  EXP-001b.yaml  EXP-002.yaml  EXP-002b.yaml  EXP-003a.yaml  EXP-003b-pilot.yaml  EXP-003b.yaml  EXP-004a.yaml  EXP-004c.yaml  EXP-005-local-followup.yaml  EXP-005.yaml  EXP-006.yaml  EXP-006b.yaml  OLLAMA-BFCL-FULL-001.yaml  SANITY-NEMOTRON-OLLAMA.yaml  _template.yaml  arch-bench-v1.yaml  brutal-bench-v1.yaml  brutal-bench-v2.yaml  brutal-cloud-ref.yaml  cand-cap-gptoss-20b.yaml  cand-cap-qwen3-14b.yaml  cand-cap-qwen3-4b-awq.yaml  cand-harbor.yaml  cand-safety-gptoss-20b.yaml  cand-safety-qwen3-14b.yaml  cand-tau2.yaml  coder-bench-v1.yaml  constraint-gate-v1-n16.yaml  constraint-gate-v1.yaml  d5-baseline-bfcl.yaml  d5-gemma-cap.yaml  d5-safety-constraint.yaml  fallback-test.yaml  fault-smoke.yaml  ft-eval-bfcl-n8.yaml  ft-eval-bfcl.yaml  ft-eval-brutal-cap16k.yaml  ft-eval-brutal.yaml  (+17 more)
containers/: Containerfile.agent-sandbox
docs/: .pages  charter.md  domains.md  index.md  roadmap-2026-06.md  steward-architecture.md
docs/_templates/: adr.md  daily.md  experiment.md  finding.md  postmortem.md
docs/adr/: .pages  ADR-001-storage-stack.md  ADR-002-inference-routing.md  ADR-003-task-taxonomy.md  ADR-004-reliability-discipline.md  ADR-005-failure-handling.md  ADR-006-dvc-kb-versioning.md  ADR-007-rag-registry.md  ADR-008-result-trust-lifecycle.md  ADR-009-scoreboard-objective.md  ADR-010-research-scout-agent.md  ADR-011-scout-autonomous-agent.md  ADR-012-agent-runtime-deployment.md  ADR-013-action-authorization.md  ADR-014-composition-multi-agent.md  ADR-015-sglang-serving.md  ADR-016-lab-agent-platform.md  ADR-017-workspace-package-boundaries.md  ADR-018-inference-plane.md  ADR-019-trust-lifecycle-db.md  ADR-020-public-private-boundary.md  index.md
docs/datasets/: index.md
docs/exp/: .pages  EXP-001.md  EXP-001b.md  EXP-002.md  EXP-002b-qwen3-reasoning-on-ablation.md  EXP-003a.md  EXP-003b.md  EXP-004a.md  EXP-004c.md  EXP-005-external-benchmarks.md  EXP-005-local-followup.md  EXP-006-qwen3-30b-moe-vs-14b-dense.md  EXP-006b-qwen3-30b-moe-re-anchored.md  EXP-007-coder-bench.md  EXP-008-hard-bench.md  EXP-009-hard-bench-multiseed.md  EXP-010-brutal-bench.md  EXP-011-hard-bench-cloud-anchor.md  EXP-012-reasoning-effort.md  EXP-013-ft-toolcall.md  EXP-013-r1-bfcl-n8.md  EXP-014-arch-bench.md  EXP-015-inject-bench.md  EXP-016-constraint-gate.md  EXP-016b-constraint-gate-n16.md  EXP-D5-BASELINE-BFCL.md  EXP-D5-GEMMA-CAP.md  EXP-D5-SAFETY-CONSTRAINT.md  EXP-PHI-TOOLCHOICE-001-bfcl-toolchoice-rerun.md  RELIABILITY-001.md  SWEEP-SMOKE-001.md  _template.md  index.md
docs/findings/: .pages  F-001-phase1-plumbing-validated.md  F-001-sweep-smoke-report.md  F-002-reliability-001-report.md  F-002-reliability-pass-caret-k.md  F-003-12gb-agent-v0.1.md  F-003-EXP-001-verdicts.tmp.md  F-004-qwen3-reasoning-ablation.md  F-005-12gb-agent-v0.2-tool-use.md  F-005-EXP-002-verdicts.tmp.md  F-006-rag-hybrid-wins-locals-need-kb.md  F-007-reranker-validation-refuted.md  F-008-qwen3-reasoning-on-ablation.md  index.md  (+12 more)
kbs/: README.md
prompts/: README.md
scripts/: add_hype_to_kb.py  analyze_exp001.py  analyze_exp002.py  analyze_exp003b.py  analyze_exp006.py  analyze_exp006b.py  analyze_exp009.py  analyze_exp010.py  analyze_exp011.py  backup.sh  bfcl_perturbed_twin.py  canary_run.py  cand_battery_promote.py  ceiling-sweep-wrapper.sh  citation_check.py  confidence_calibration.py  constraint_compliance.py  docs-lint-precommit.sh  injection_compliance.py  judge_calibration.py  judge_exp001.py  lab-session-start.sh  migrate_kb_schema_v2.py  mypy-precommit.sh  pre-push-check.sh  rebuild_bash_parent_child.py  restore.sh  retrieval_sweep.py  roll_daily_log.sh  trajectory_audit.py
services/: rerank.service
tools/: add_paper.py  backfill_mlflow.py  bump_kb_version.py  new_experiment.py  refresh_analytics_cache.py  sync_golden_outputs.py  sync_model_cards.py  sync_task_cards.py
(+476 files in other folders)
