[project]
name = "lab"
version = "0.0.1"
description = "Solo AI/ML research lab — agentic workflow comparison infrastructure."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Matt Rachlin", email = "mattrachlin@gmail.com" }]

dependencies = [
    # Core
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.15.0",
    "rich>=13.9.0",

    # Configuration
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",

    # Data stores
    "psycopg[binary,pool]>=3.2.0",
    "duckdb>=1.1.0",
    "redis>=5.1.0",                   # valkey speaks redis protocol
    "boto3>=1.35.0",                  # for MinIO via S3 API
    "minio>=7.2.0",

    # Inference + models
    "ollama>=0.4.0",
    "litellm>=1.50.0",
    "httpx>=0.27.0",

    # Experiment tracking
    "mlflow>=2.18.0",

    # Eval + science
    "scipy>=1.14.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",

    # Utilities
    "anyio>=4.6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.115.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-redis",
    "types-protobuf",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.2.0",
]
notebook = [
    "marimo>=0.9.0",
    "matplotlib>=3.9.0",
    "altair>=5.4.0",
]

[project.scripts]
lab = "lab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: requires live Postgres/Valkey/MinIO/Ollama",
    "slow: tests that take >2s",
]

[tool.coverage.run]
source = ["src/lab"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
precision = 1
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
