[project]
name = "lab"
version = "0.0.1"
description = "Solo AI/ML research lab — agentic workflow comparison infrastructure."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Matt Rachlin", email = "mattrachlin@gmail.com" }]

dependencies = [
    # Phase 15.1: workspace members. Each lives under packages/lab-*/src/lab/<name>
    # and contributes to the `lab.*` PEP 420 namespace package.
    "lab-core",
    "lab-rag",
    "lab-agent",
    "lab-eval",
    "lab-inspect",
    "lab-sweep",
    "lab-observability",
    "lab-cli",
    # Core
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    # Configuration
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    # Data stores
    "psycopg[binary,pool]>=3.2.0",
    "duckdb>=1.1.0",
    "redis>=5.1.0",                   # valkey speaks redis protocol
    "boto3>=1.35.0",                  # for MinIO via S3 API
    "minio>=7.2.0",
    # Inference + models
    "ollama>=0.4.0",
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    # Experiment tracking
    "mlflow>=2.18.0",
    # Eval + science
    "scipy>=1.14.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    # Utilities
    "anyio>=4.6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "inspect-ai>=0.3.226",
    "mcp>=1.27.1",
    # RAG (vendored from kb-builder; Phase 6h-a)
    "lancedb>=0.18.0",
    "pyarrow>=18.1.0",
    "trafilatura>=2.0.0",
    "selectolax>=0.3.27",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.2",
    "pymupdf>=1.25.1",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.8.0",
    "python-ulid>=3.0.0",
    "platformdirs>=4.3.6",
    "ruamel.yaml>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.115.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pyright>=1.1.400",
    "types-redis",
    "types-protobuf",
    "types-PyYAML",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.2.0",
    "mkdocs-awesome-pages-plugin>=2.9",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]
notebook = [
    "marimo>=0.9.0",
    "matplotlib>=3.9.0",
    "altair>=5.4.0",
]
rag = [
    # Phase 7 cross-encoder reranker (host-side: integration tests + ad-hoc
    # `lab rag` invocations + the rerank_server systemd unit). Sandbox cells
    # no longer carry sentence-transformers/torch — they call the host
    # rerank server over HTTP (see lab.rag.rerank_client). This stays an
    # opt-in extra to keep the base venv lean.
    "sentence-transformers>=3.0",
    # Phase 7.1 host-side rerank HTTP service. FastAPI + uvicorn are
    # transitively pulled in via mcp today, but we pin them explicitly
    # here so `uv sync -E rag` is self-contained for the systemd unit.
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
lab = "lab.cli:app"

# Phase 15.1: uv workspace declaration. Members live under packages/lab-*.
[tool.uv.workspace]
members = ["packages/lab-*"]

[tool.uv.sources]
lab-core = { workspace = true }
lab-rag = { workspace = true }
lab-agent = { workspace = true }
lab-eval = { workspace = true }
lab-inspect = { workspace = true }
lab-sweep = { workspace = true }
lab-observability = { workspace = true }
lab-cli = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Phase 15.1: root `lab` distribution is an umbrella that just pulls in the
# workspace members; the source for the `lab.*` namespace lives in those.
# Build the wheel from the (now empty after migration) src/lab to satisfy
# hatchling's package discovery without re-shipping any modules.
[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: requires live Postgres/Valkey/MinIO/Ollama",
    "slow: tests that take >2s",
]

[tool.pyright]
# Phase 13.8: 2nd-opinion type checker alongside mypy --strict.
# "standard" mode produces 5 errors as of Phase 13 (same count as
# "basic" — the marginal checks "standard" adds don't trigger here).
# "strict" balloons to ~500 due to Unknown propagation through pydantic
# and untyped 3rd-party packages — not worth it for a 2nd opinion.
include = ["src"]
exclude = ["**/__pycache__", "**/.venv"]
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
pythonVersion = "3.12"

[tool.coverage.run]
source = ["src/lab"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
precision = 1
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

[dependency-groups]
dev = [
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
]
